# DGPCompFab

./: .gitmodules  README.md
A1/: CMakeLists.txt
A1/scripts/: intersection.cpp  testScript.cpp
A1/src/: main.cpp
A2/: CMakeLists.txt
A2/include/: Optimization.h
A2/scripts/: difference.cpp  robotArm.cpp  union.cpp
A2/src/: Optimization.inl  main.cpp
A3/: CMakeLists.txt
A3/include/: ForceSpringA3.h  TimeStepperEulerImplicitLinearA3.h
A3/src/: main.cpp
A4/: CMakeLists.txt
A4/include/: QuadratureLinearElasticityA4.h  ShapeFunctionTetLinearA4.h  projectDefines.h
A4/src/: main.cpp
A5/: linkages.m
cmake/: FindLIBIGL.cmake
interpreter/: CMakeLists.txt
interpreter/src/: main.cpp
util/: CMakeLists.txt
util/include/: Shape.h  csgOps.h  interopUtils.h  shapes.h
util/src/: Shape.cpp  csgOps.cpp  interopUtils.cpp  shapes.cpp
